--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "jest": "^27.0.4",
     "mongodb-memory-server": "^7.3.6",
+    "nodemon": "^2.0.12",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
@@ -43,6 +46,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node build/index.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
     "db:migrate": "migrate-mongo up",
     "check-types": "tsc --noemit",
     "eslint": "eslint . --ext .ts",
