--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "feathers-mongoose": "^8.3.3",
+    "jest-coverage-badges": "^1.1.2",
     "jsonwebtoken": "^8.5.1",
     "migrate-mongo": "^8.2.3",
     "module-alias": "^2.2.2",
@@ -37,11 +38,9 @@
   "name": "sick-flicks-api",
   "version": "1.0.0",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
     "test": "NODE_ENV=test jest --verbose --coverage",
+    "posttest": "jest-coverage-badges",
     "init": "tsc --init",
     "build": "tsc",
     "prestart": "npm run build",
