--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-  
-      - name: Generating Coverage Badges
-        uses: jpb06/jest-badges-action@1.6.0
-        with:
-          branches: main
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
