--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --verbose --coverage",
+    "test": "NODE_ENV=test jest",
     "init": "tsc --init",
     "build": "tsc",
     "prestart": "npm run build",
